2001-02-27  Andreas Jaeger  <aj@suse.de>

	* configure.in: Document that --disable-checking is default.
	* configure: Regenerated.

2001-02-27  Mark Mitchell  <mark@codesourcery.com>

	* configure.in: Make --disable-checking the default.
	* configure: Regenerated.

2001-02-26  Mark Mitchell  <mark@codesourcery.com>

	Revert the two previous changes.

Sun Feb 25 08:34:23 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>

	* config/i386/i386-protos.h (ix86_set_move_mem_attrs): Move decl.
	* config/i386/i386.c (ix86_set_move_mem_attrs_1): Fix typo.
	* config/i386/i386.md (movstrsi): Handle FAIL case.

Sat Feb 24 20:25:29 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>

	* config/i386/i386.c (ix86_set_move_mem_attrs): New function.
	(ix86_set_move_mem_attrs_1): Likewise.
	* config/i386/i386-protos.h (ix86_set_move_mem_attrs): New declaration.
	* config/i386/i386.md (movstrsi): Call it.

2001-02-24  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>

	* loop.c (check_dbra_loop): A biv has uses besides counting if it is
	used to set another biv.

Sat Feb 24 06:45:21 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>

	* errors.c (internal_error, trim_filename): New functions.
	(fancy_abort): Call internal_error.
	* errors.h (internal_error, trim_filename): New declarations.

2001-02-24  Alexandre Oliva  <aoliva@redhat.com>

	* config/mn10300/mn10300.h (DBX_REGISTER_NUMBER): Reverted
	2000-08-26's patch.
	(EXTRA_CONSTRAINT): Formatting changes.

2001-02-23  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* rtl.c (rtl_check_failed_code2): Fix typo in last change.

Fri Feb 23 15:28:39 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>

	* diagnostic.c (trim_filename): No longer static.
	* toplev.h (trim_filename): Declare.
	* rtl.c (rtl_check_failed_bounds): Call internal_error.
	(rtl_check_failed_type1, rtl_check_failed_type2): Likewise.
	(rtl_check_failed_code1, rtl_check_failed_code2): Likewise.
	(rtvec_check_failed_bounds): Likewise.